commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -8682,6 +8682,7 @@ legend.scheduler-border {
   width: 20px;
   height: 20px;
   margin-top: -2px;
+  filter: brightness(3);
 }
 
 .ExtraCheckboxFieldWidth {
