commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1368,6 +1368,7 @@ label.arrow_label:before {
     width: 13px;
     height: 13px;
     color: #e4e5e6;
+    filter: brightness(2);
   }
 
   .collapse-bg {
