commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -16119,7 +16119,7 @@ label.arrow_label:before {
   left: 190px !important;
   z-index: 2 !important;
   position: sticky !important;
-  background: #212631 !important;
+  background: transparent !important;
 }
 
 .TreeTable .jss>tbody>tr:nth-child(even)>td:nth-child(5) {
@@ -16128,7 +16128,7 @@ label.arrow_label:before {
   left: 190px !important;
   z-index: 2 !important;
   position: sticky !important;
-  background: #373c46 !important;
+  background: transparent !important;
 }
 
 .TreeTable .jexcel>thead {
