--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -16119,7 +16119,7 @@ label.arrow_label:before {
   left: 190px !important;
   z-index: 2 !important;
   position: sticky !important;
-  background: transparent !important;
+  background: #e5ecf6 !important;
 }
 
 .TreeTable .jss>tbody>tr:nth-child(even)>td:nth-child(5) {
@@ -16128,7 +16128,7 @@ label.arrow_label:before {
   left: 190px !important;
   z-index: 2 !important;
   position: sticky !important;
-  background: transparent !important;
+  background: #fff !important;
 }
 
 .TreeTable .jexcel>thead {
@@ -16329,7 +16329,7 @@ label.arrow_label:before {
 }
 .ShowdecimalClr .MuiSwitch-thumb {
   background-color: #fff; /* Dark switch handle in light mode */
-  // margin-top: 3px;
+  margin-top: 3px;
 }
 .MuiIconButton-root:hover {
   background-color: transparent!important;
