commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -16325,7 +16325,7 @@ label.arrow_label:before {
 }
 .ShowdecimalClr .MuiSwitch-colorPrimary.Mui-checked {
   color: #fff !important;
-  margin-top: 3px!important;
+  // margin-top: 3px!important;
 }
 .ShowdecimalClr .MuiSwitch-colorPrimary.Mui-checked + .MuiSwitch-track {
   background-color: #23a8d8!important;
