--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -5218,7 +5218,7 @@ h5,
   margin: 0 auto;
   font-size: 24px;
   position: relative;
-  // z-index: 5;
+  z-index: 5;
 }
 
 // .app-header .nav-item {
