commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1280,6 +1280,7 @@ label.arrow_label:before {
     min-width: 120px;
     z-index: 2 !important;
     background: #212631 !important;
+    color: #e4e5e6!important;
   }
 
   .leftAlignTable1 .jss_overflow>tbody>tr>td:nth-child(4) {
@@ -1289,6 +1290,7 @@ label.arrow_label:before {
     min-width: 120px;
     z-index: 3 !important;
     background: #212631 !important;
+    color: #e4e5e6!important;
   }
 
   .jdropdown-item {
