commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -16310,3 +16310,6 @@ label.arrow_label:before {
 .MuiIconButton-root:hover {
   background-color: transparent!important;
 }
+.ShowdecimalClr .MuiSwitch-root{
+  margin-left: 1px;
+  }
