ccomited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -12046,8 +12046,9 @@ label.arrow_label:before {
 }
 
 .checkboxMargin {
-  margin-top: 3px !important;
+  margin-top: 2px !important;
   cursor: pointer;
+  margin-left: -16px;
 }
 
 .VersionSettingMarginTop {
