--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -9473,6 +9473,18 @@ label.arrow_label:before {
   height: 33px !important;
 }
 
+.TemplateTitleBgpurple {
+  background: #C3B1E1 !important;
+  // background: #eee!important;
+  border: none !important;
+  border-radius: 0px !important;
+  padding: 0px 0px 1px 0px !important;
+  top: 0px !important;
+  left: 0px !important;
+  right: 0px !important;
+  height: 33px !important;
+}
+
 .TitleColorWhite {
   color: #fff !important;
   font-weight: bold !important;
