--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -11816,8 +11816,9 @@ label.arrow_label:before {
 }
 
 .checkboxMargin {
-  margin-top: 3px !important;
+  margin-top: 2px !important;
   cursor: pointer;
+  margin-left: -16px;
 }
 
 .VersionSettingMarginTop {
