--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -2910,7 +2910,7 @@ label.arrow_label:before {
     z-index: 2 !important;
     position: sticky !important;
     background: #212631;
-    cursor: default !important;
+    // cursor: default !important;
   }
 
   // .text-blackD {
@@ -15331,7 +15331,7 @@ label.arrow_label:before {
   // left: 90px !important;
   z-index: 3 !important;
   position: sticky !important;
-  cursor: default !important;
+  // cursor: default !important;
 
 }
 
@@ -15342,7 +15342,7 @@ label.arrow_label:before {
   z-index: 2 !important;
   position: sticky !important;
   background: #fff;
-  cursor: default !important;
+  // cursor: default !important;
 }
 
 .legend-erp {
