commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -16313,3 +16313,9 @@ label.arrow_label:before {
 .ShowdecimalClr .MuiSwitch-root{
   margin-left: 0px;
   }
+  .MuiSwitch-root{
+    margin-top: -13px!important;
+  }
+  .RowMarginToggle{
+    margin-bottom: -9px;
+  }
