--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -3784,11 +3784,10 @@ label.arrow_label:after {
   background-color: #e4e7ea;
   border-color: #c8ced3;
 }
-<<<<<<< HEAD
 
 .page-link {
   padding: 0.3rem 0.65rem;
-=======
+}
 .MarginTopfieldsupply{
   margin-top: -5px;
 }
@@ -3825,7 +3824,6 @@ label.arrow_label:after {
 // .TableColorL td{
 //   color: #000;
 // }
->>>>>>> QAT-5218
 }
 
 @media only screen and (max-width: 600px) {
