commited by anisha

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -2951,7 +2951,7 @@ body {
 
   .typing-en::before {
     content: "Type at least 3 characters to search";
-    color: #212721;
+    // color: #212721;
     font-style: italic;
   }
 
