fixed NA issue in last column of compare & select

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -16582,3 +16582,7 @@ label.arrow_label:before {
     height: 600px;
    }
  }
+
+.jss>tbody>tr>td.cmpAndSelectTbl {
+  white-space: normal !important;
+}
