--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -17569,7 +17569,7 @@ label.arrow_label:before {
   background:#f5f5f9!important;
 }
 .fixTableHeadTopDashboard {
-  max-height: calc(100vh - 680px) !important;
+  max-height: calc(100vh - 50vh) !important;
   overflow: scroll;
   border-top: 1px solid #2a303d;
 }
