--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -17495,17 +17495,17 @@ label.arrow_label:before {
   height: 100%;
   left: 0;
   top: 0;
-  background: linear-gradient(
-    to right,
-    #fff,
-    rgba(255, 255, 255, 0) 80px,
-    rgba(255, 255, 255, 0) calc(100% - 80px),
-    #fff
-  );
+  // background: linear-gradient(
+  //   to right,
+  //   #fff,
+  //   rgba(255, 255, 255, 0) 80px,
+  //   rgba(255, 255, 255, 0) calc(100% - 80px),
+  //   #fff
+  // );
 }
 
 .orb {
-  width: 168px;
+  // width: 168px;
   height: 50px;
   line-height: 20px;
   font-size: 15px;
