--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -17573,3 +17573,6 @@ label.arrow_label:before {
   overflow: scroll;
   border-top: 1px solid #2a303d;
 }
+.selectBlack{
+  color: #000000 !important;
+}
