--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -17516,7 +17516,7 @@ label.arrow_label:before {
 
 .scroll-wrapper {
   display: flex;
-  animation: marquee 20s linear infinite;
+  animation: marquee 30s linear infinite;
 }
 
 /* Pause animation on hover */
@@ -17554,13 +17554,13 @@ label.arrow_label:before {
   border: 1px solid #aaa;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
   border-radius: 8px;
-  background: #4ad;
-  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0));
+  background: #FFFFFF;
+  // background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0));
 }
 .scroller {
   display: flex;
   width: calc(100% * 4); /* Enough width to hold duplicated content */
-  animation: scroll 20s linear infinite;
+  animation: scroll 30s linear infinite;
 }
 
 .scroller-content {
@@ -17579,7 +17579,7 @@ label.arrow_label:before {
 }
 
 .scroller-content div a {
-  color: #BA0C2F;
+  color: #002F6C;
 }
 
 @keyframes scroll {
@@ -17607,8 +17607,8 @@ label.arrow_label:before {
   border: 1px solid #aaa;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
   border-radius: 8px;
-  background: #4ad;
-  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0));
+  background: #FFFFFF;
+  // background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0));
 }
 .scroller-content div {
   font-size: 16px;
